--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -10,9 +10,9 @@
         background-color: $color-grey-light-1;
         color: $color-grey-dark-3;
         font-size: 2rem;        
-        // width: auto;
+        width: auto;
         margin: 1rem;
-        // display: inline-block;
+        display: inline-block;
         transition: all .5s;
         animation-fill-mode: backwards;
         margin-top: 1rem;
@@ -39,8 +39,14 @@
     }
 
     &__contact {
-        width: 85px;
+        display: flex;
+        width: 30%;
+        border: none;
+        justify-content: center;
 
+        @include respond(tab-port) {
+            width: 45%;
+        }
     }
 
     &--animated {
